--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
     - docker
 install:
     - echo "nothing to install"
+scripts:
+    - echo "no scripts"
 after_success:
     - docker --version
     - docker built -t kirandasika30/res-service -f Dockerfile .
