--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ script:
 
 after_success:
     - docker --version
-    - docker built -t kirandasika30/res-service -f Dockerfile .
+    - docker build -t kirandasika30/res-service -f Dockerfile .
     - docker login -u $DOCKER_USERNAME --password-stdin
     - docker push kirandasika30/res-service
