--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
 after_success:
     - docker --version
     - docker build -t kirandasika30/res-service -f Dockerfile .
-    - docker login -u $DOCKER_USERNAME --password-stdin
+    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
     - docker push kirandasika30/res-service
