--- a/templates/service.yml
+++ b/templates/service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: resume-service-svc
+    name: resumes-server
     annotations:
         traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
     labels:
         type: help
 spec:
     selector:
-        app: resumes
+        app: resumes-server
     ports:
         - name: http
           port: 80
