travis-ci and resource changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ script:
 
 
 after_success:
+    - SHA=$(git rev-parse HEAD)
     - docker --version
-    - docker build -t kirandasika30/resume-server -f Dockerfile .
+    - docker build -t kirandasika30/resume-server:$SHA -f Dockerfile .
     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
-    - docker push kirandasika30/resume-server
+    - docker push kirandasika30/resume-server:$SHA
